Changed Copyright Info

--- a/404.html
+++ b/404.html
@@ -319,7 +319,8 @@ Bouncing Tumbleweed Adapted from @Aidan_Breen from 'https://codepen.io/aido179-1
           </div>
           <!-- //.footer-logo -->
           <p class="disclaimer xs-text-center">
-            COPYRIGHT by TEKNOTHON.
+            Open-Source Project by TEKNOTHON @ 
+            <a href="https://github.com/teknothon"><i class="fa fa-github"></i></a>
           </p>
           <!-- //.disclaimer -->
         </div>
