--- a/about/index.html
+++ b/about/index.html
@@ -262,7 +262,8 @@ Jamia Millia Islamia (translation: National Islamic University) is a public cent
           </div>
           <!-- //.footer-logo -->
           <p class="disclaimer xs-text-center">
-            COPYRIGHT by TEKNOTHON
+            Open-Source Project by TEKNOTHON @ 
+            <a href="https://github.com/teknothon"><i class="fa fa-github"></i></a>
           </p>
           <!-- //.disclaimer -->
         </div>
