--- a/contact/index.html
+++ b/contact/index.html
@@ -310,7 +310,8 @@ Event website by @SahilQaiser, Adapted from TEDxJMI project by Syed Faheel Ahmad
           </div>
           <!-- //.footer-logo -->
           <p class="disclaimer xs-text-center">
-            COPYRIGHT by TEKNOTHON
+            Open-Source Project by TEKNOTHON @ 
+            <a href="https://github.com/teknothon"><i class="fa fa-github"></i></a>
           </p>
           <!-- //.disclaimer -->
         </div>
