--- a/events/index.html
+++ b/events/index.html
@@ -544,7 +544,7 @@ Event website by @SahilQaiser, Adapted from TEDxJMI project by Syed Faheel Ahmad
             <!-- //.position-relative -->
             <div class="bg-gray-light no-padding-rl padding-6 position-relative text-center">
               <span class="display-block font-family-alt font-weight-700 letter-spacing-2 text-gray-dark-2 text-small text-uppercase">
-                TPL<br>Cricket Tournament
+                TPL Cricket Tournament
               </span>
             </div>
             <!-- //.bg-gray-light -->
@@ -729,7 +729,8 @@ Event website by @SahilQaiser, Adapted from TEDxJMI project by Syed Faheel Ahmad
           </div>
           <!-- //.footer-logo -->
           <p class="disclaimer xs-text-center">
-            COPYRIGHT by TEKNOTHON
+            Open-Source Project by TEKNOTHON @ 
+            <a href="https://github.com/teknothon"><i class="fa fa-github"></i></a>
           </p>
           <!-- //.disclaimer -->
         </div>
