Deleted Twitter Feed

--- a/index.html
+++ b/index.html
@@ -318,8 +318,6 @@ Event website by @SahilQaiser, Adapted from TEDxJMI project by Syed Faheel Ahmad
   </section>
   <!-- //Section - Venue End -->
 
-
-
   <!-- Section - Social start -->
   <section id="social" class="bg-gray-light-2 pull-up">
     <div class="container">
@@ -336,7 +334,7 @@ Event website by @SahilQaiser, Adapted from TEDxJMI project by Syed Faheel Ahmad
       <div class="row">
 
         <!-- Social Box -->
-        <div class="features-box col-sm-6 col-md-4 sm-margin-4 sm-no-margin-rl sm-no-margin-bottom">
+        <div class="features-box col-sm-6 sm-margin-4 sm-no-margin-rl sm-no-margin-bottom">
           <div class="border border-gray-light border-round box-shadow-yes position-relative bg-white">
             <div class="display-table height-100 no-padding-rl padding-7 width-100">
               <div class="display-table-cell no-padding-tb padding-8 vertical-align-middle">
@@ -345,7 +343,7 @@ Event website by @SahilQaiser, Adapted from TEDxJMI project by Syed Faheel Ahmad
                 </span>
                 <!-- Facebook posts -->
                 <script src="https://snapwidget.com/js/snapwidget.js"></script>
-                <div style="height: 500px; overflow-y: auto">
+                <div style="height: 160px; overflow-y: auto">
                   <iframe src="https://snapwidget.com/embed/517234" class="snapwidget-widget" allowTransparency="true" frameborder="0" style="border:none; width:100%;"></iframe>
                 </div>
                 <!-- //Facebook posts -->
@@ -358,40 +356,16 @@ Event website by @SahilQaiser, Adapted from TEDxJMI project by Syed Faheel Ahmad
         </div>
         <!-- //Social Box -->
         <!-- Social Box -->
-        <div class="features-box col-sm-6 col-md-4 xs-margin-4 xs-no-margin-rl xs-no-margin-bottom">
-          <div class="border border-gray-light border-round box-shadow-yes position-relative bg-white">
-            <div class="display-table height-100 no-padding-rl padding-7 width-100">
-              <div class="display-table-cell no-padding-tb padding-8 vertical-align-middle">
-                <span class="display-block font-weight-700 letter-spacing-1 text-large text-uppercase margin-4 no-margin-rl no-margin-top text-center">
-                  Twitter
-                </span>
-
-                <!-- Twitter timeline -->
-                <a class="twitter-timeline" data-height="493" data-chrome="noheader, nofooter"
-                  data-dnt="true" href="https://twitter.com/SahilQaiser">Tweets by Me</a>
-                <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-                <!-- //Twitter timeline -->
-              </div>
-              <!-- //.display-table-cell -->
-            </div>
-            <!-- //.display-table -->
-          </div>
-          <!-- //.border -->
-        </div>
-        <!-- //Social Box -->
-
-        <!-- Social Box -->
-        <div class="features-box col-sm-6 col-md-4 sm-margin-4 sm-no-margin-rl sm-no-margin-bottom">
+        <div class="features-box col-sm-6 sm-margin-4 sm-no-margin-rl sm-no-margin-bottom">
           <div class="border border-gray-light border-round box-shadow-yes position-relative bg-white">
             <div class="display-table height-100 no-padding-rl padding-7 width-100">
               <div class="display-table-cell no-padding-tb padding-8 vertical-align-middle">
                 <span class="display-block font-weight-700 letter-spacing-1 text-large text-uppercase margin-4 no-margin-rl no-margin-top text-center">
                   Instagram
                 </span>
-
                 <!-- Instagram posts -->
                 <script src="https://snapwidget.com/js/snapwidget.js"></script>
-                <div style="height: 500px; overflow-y: auto">
+                <div style="height: 160px; overflow-y: auto">
                   <iframe src="https://snapwidget.com/embed/515541" class="snapwidget-widget" allowTransparency="true" frameborder="0" style="border:none; width:100%;"></iframe>
                 </div>
                 <!-- //Instagram posts -->
