Added Event Registration

--- a/sponsors/index.html
+++ b/sponsors/index.html
@@ -88,12 +88,12 @@ Event website by @SahilQaiser, Adapted from TEDxJMI project by Syed Faheel Ahmad
             <li><a href="/" class="line-height-unset">Home</a></li>
             <li><a href="/about/" class="line-height-unset">About</a></li>
             <li><a href="#page-top" class="line-height-unset">Our Team</a></li>
-            <li><a href="#page-top" class="line-height-unset">Events</a></li>
+            <li><a href="/events/" class="line-height-unset">Events</a></li>
             <li><a href="#page-top" class="page-scroll">Sponsors</a></li>
             <li><a href="/contact/" class="line-height-unset">Contact Us</a></li>
             <li class="bg-base-color">
-              <a href="/register/" class="line-height-unset width-100">
-                Sponsorship Registration
+              <a href="/eventreg/" class="line-height-unset width-100">
+                Event Registration
               </a>
             </li>
           </ul>
@@ -179,8 +179,8 @@ Event website by @SahilQaiser, Adapted from TEDxJMI project by Syed Faheel Ahmad
         <!-- //.col-sm-4 -->
 
         <div id="banner-registration" class="col-sm-4 xs-margin-8 xs-no-margin-bottom xs-no-margin-rl text-center">
-          <a href="/register/" class="btn btn-outline-base-color sm-btn-medium btn-large no-margin-rl">
-            <span>Register for<br>Sponsorship</span>
+          <a href="/eventreg/" class="btn btn-outline-base-color sm-btn-medium btn-large no-margin-rl">
+            <span>Register For<br>Events</span>
           </a>
         </div>
         <!-- //.col-sm-4 -->
