--- a/404.html
+++ b/404.html
@@ -176,13 +176,13 @@ Bouncing Tumbleweed Adapted from @Aidan_Breen from 'https://codepen.io/aido179-1
           <ul class="nav navbar-nav font-family-alt letter-spacing-1 text-uppercase font-weight-700">
             <li><a href="/" class="line-height-unset">Home</a></li>
             <li><a href="/about/" class="line-height-unset">About</a></li>
-            <li><a href="/our-team/" class="line-height-unset">Our Team</a></li>
+            <li><a href="#page-top" class="line-height-unset">Our Team</a></li>
             <li><a href="/events/" class="line-height-unset">Events</a></li>
             <li><a href="/sponsors/" class="line-height-unset">Sponsors</a></li>
             <li><a href="/contact/" class="line-height-unset">Contact Us</a></li>
             <li class="bg-base-color">
-              <a href="/register/" class="line-height-unset width-100">
-                Register
+              <a href="/eventreg/" class="line-height-unset width-100">
+                Event Registration
               </a>
             </li>
           </ul>
@@ -256,8 +256,8 @@ Bouncing Tumbleweed Adapted from @Aidan_Breen from 'https://codepen.io/aido179-1
         <!-- //.col-sm-4 -->
 
         <div id="banner-registration" class="col-sm-4 xs-margin-8 xs-no-margin-bottom xs-no-margin-rl text-center">
-          <a href="/res/insider_guide.pdf" class="btn btn-outline-base-color sm-btn-medium btn-large no-margin-rl">
-            <span>Download<br>insider guide</span>
+          <a href="/eventreg/" class="btn btn-outline-base-color sm-btn-medium btn-large no-margin-rl">
+            <span>Register For<br>Events</span>
           </a>
         </div>
         <!-- //.col-sm-4 -->
