Added Event Registration

--- a/eventreg/index.html
+++ b/eventreg/index.html
@@ -92,7 +92,7 @@ Page Create By Basarat Ali (github.com/joker-r)
             <li><a href="#page-top" class="line-height-unset">Events</a></li>
             <li><a href="/sponsors/" class="line-height-unset">Sponsors</a></li>
             <li><a href="/contact/" class="line-height-unset">Contact Us</a></li>
-            <li><a href="#page-top" class="page-scroll">Sponsorship Registration</a></li>
+            <li><a href="#page-top" class="page-scroll">Event Registration</a></li>
           </ul>
         </div>
         <!-- //.navbar-collapse -->
