Event Register Title

--- a/eventreg/index.html
+++ b/eventreg/index.html
@@ -57,7 +57,7 @@ Page Create By Basarat Ali (github.com/joker-r)
 
   <!-- Color skin -->
   <link rel="stylesheet" href="../res/css/color_blue.css">
-<script src="../res/js/paytm.js"></script>
+  <script src="../res/js/paytm.js"></script>
   <!-- Modernizr JS for IE8 support of HTML5 elements and media queries -->
   <!--[if lt IE 8]>
   <script src="../res/js/modernizr.min.js"></script>
@@ -89,7 +89,7 @@ Page Create By Basarat Ali (github.com/joker-r)
             <li><a href="/" class="line-height-unset">Home</a></li>
             <li><a href="/about/" class="line-height-unset">About</a></li>
             <li><a href="#page-top" class="line-height-unset">Our Team</a></li>
-            <li><a href="#page-top" class="line-height-unset">Events</a></li>
+            <li><a href="/events/" class="line-height-unset">Events</a></li>
             <li><a href="/sponsors/" class="line-height-unset">Sponsors</a></li>
             <li><a href="/contact/" class="line-height-unset">Contact Us</a></li>
             <li><a href="#page-top" class="page-scroll">Event Registration</a></li>
@@ -130,8 +130,9 @@ Page Create By Basarat Ali (github.com/joker-r)
           <br>
           
           <div class="row" align="left">
-              <div class="text">
-                  <h1 align="center" class="bg-primary text-white">EVENT Registration Form</h1>
+              <div class="text" align="center">
+                <h2 class="font-family-alt font-weight-700 sm-title-large title-extra-large-2 text-gray-dark-2">
+                    Event Registration Form</h2>
                   </div><br><br>
             <!-- Google Spreadsheet START HERE -->
             <!-- Style The Contact Form How Ever You Prefer -->
