--- a/events/index.html
+++ b/events/index.html
@@ -210,7 +210,10 @@ Event website by @SahilQaiser, Adapted from TEDxJMI project by Syed Faheel Ahmad
                             <h4 class="modal-title">Game of Codes</h4>
                           </div>
                           <div class="modal-body">
-                            <p>Adding Details Soon...</p>
+                            <p>Do you have what it takes to survive a coding Marathon?</p>
+                            <p>Then we have just the right thing for you...</p>
+                            <p>Teknothon'18 presents 'Game of Codes' where participants can show their ability to solve some real problems using C/C++/Java</p>
+                            <p>Event Type : SOLO</p><p>Registration Cost : </p>
                           </div>
                           <div class="modal-footer">
                             <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
