--- a/eventreg/index.html
+++ b/eventreg/index.html
@@ -129,20 +129,20 @@ Page Create By Basarat Ali (github.com/joker-r)
           <div class="row" align="left">
               <div class="text" align="center">
                 <h2 class="font-family-alt font-weight-700 sm-title-large title-extra-large-2 text-gray-dark-2">
-                    Event Registration Form</h2>
+                    Event Registration Form [Not Open Yet]</h2>
                   </div><br><br>
             <!-- Google Spreadsheet START HERE -->
             <!-- Style The Contact Form How Ever You Prefer -->
             <link rel="stylesheet" href="../res/style.css">
-            <form id="gform" method="POST" class="sizeAdjust" data-email="teknothon.dcs@gmail.com"
+            <form id="gform" method="POST" class="sizeAdjust" data-email="teknothon.dcs@gmail.com" 
             action="https://script.google.com/macros/s/AKfycbxOkcuBL-08vxmUKtv3TGeg2H1WMyDvATnxVNpRbHg1l4Ehqb4/exec">
               <!-- change the form action to your script url -->
               <div class="row">
-                  <fieldset class="pure-group">
+                  <fieldset disabled class="pure-group">
                       <label for="name">Name: </label><br>
                       <input id="name" name="name" placeholder="Individual name / Group Name " />
                     </fieldset>
-                    <fieldset class="pure-group">
+                    <fieldset disabled class="pure-group">
                       <label for="email">Email Address:</label><br>
                       <input id="email" name="email" type="email" value=""
                       required placeholder="name@email.com"/>
