--- a/eventreg/index.html
+++ b/eventreg/index.html
@@ -161,9 +161,7 @@ Page Create By Basarat Ali (github.com/joker-r)
                      .fill-container div{
                         margin-left: 0%;
                      }
-                     .btn button{
-                       align-items: center;
-                     }
+                     
                    </style>
              <!-- <label for="sel1">Select Event :</label> -->
              <div class="container fill-container sizeAdjust">
@@ -200,7 +198,7 @@ Page Create By Basarat Ali (github.com/joker-r)
                                   <label><input type="checkbox" class="event_checks" value=50 name="CHESSMATE"/>CHESSMATE</label><br>               
                           </div>
                           <div class="modal-footer">
-                            <button type="button" class="btn btn-default" onclick="javascript:selectEvents();" data-dismiss="modal">Close</button>
+                            <button type="button" class="btn btn-default" onclick="javascript:selectEvents();" data-dismiss="modal">Save</button>
                           </div>
                         </div>
                       </div>
