--- a/eventreg/index.html
+++ b/eventreg/index.html
@@ -161,7 +161,9 @@ Page Create By Basarat Ali (github.com/joker-r)
                      .fill-container div{
                         margin-left: 0%;
                      }
-                     
+                     .labelFormat label{
+                       align-content: center;
+                     }
                    </style>
              <!-- <label for="sel1">Select Event :</label> -->
              <div class="container fill-container sizeAdjust">
@@ -211,6 +213,7 @@ Page Create By Basarat Ali (github.com/joker-r)
               <label for="email">Payment Mode:</label><br>
               <div class="cardtype form_row">
              <input type="radio" onclick="javascript:yesnoCheck();" name="yesno" id="yesCheck"><img src="paytm.png"><br>
+             <label class="labelFormat">Or Pay To +91-8825030679</label>
 		      </div>	
           <div id="ifYes" style="visibility:hidden">
 				    <img src="payment.png" width="60%"><br>
