--- a/eventreg/index.html
+++ b/eventreg/index.html
@@ -167,7 +167,7 @@ Page Create By Basarat Ali (github.com/joker-r)
                    </style>
              <!-- <label for="sel1">Select Event :</label> -->
              <div class="container fill-container sizeAdjust">
-             <div class="bg-gray-light no-padding-rl padding-6 sizeAdjustModal position-relative text-center">
+             <div class="bg-gray-light no-padding-rl sizeAdjustModal position-relative text-center">
                 <span class="display-block font-family-alt font-weight-700 letter-spacing-2 text-gray-dark-2 text-small text-uppercase">
                   <button type="button" class="btn" data-toggle="modal" data-target="#EventsModal"><span align="right" class="glyphicon glyphicon-exclamation-sign"></span> Select Events</button>
                     <!-- Modal -->
