--- a/eventreg/index.html
+++ b/eventreg/index.html
@@ -138,11 +138,11 @@ Page Create By Basarat Ali (github.com/joker-r)
             action="https://script.google.com/macros/s/AKfycbxOkcuBL-08vxmUKtv3TGeg2H1WMyDvATnxVNpRbHg1l4Ehqb4/exec">
               <!-- change the form action to your script url -->
               <div class="row">
-                  <fieldset disabled class="pure-group">
+                  <fieldset class="pure-group">
                       <label for="name">Name: </label><br>
                       <input id="name" name="name" placeholder="Individual name / Group Name " />
                     </fieldset>
-                    <fieldset disabled class="pure-group">
+                    <fieldset class="pure-group">
                       <label for="email">Email Address:</label><br>
                       <input id="email" name="email" type="email" value=""
                       required placeholder="name@email.com"/>
