--- a/eventreg/index.html
+++ b/eventreg/index.html
@@ -218,7 +218,7 @@ Page Create By Basarat Ali (github.com/joker-r)
           </div>
           <div>	
           <div id="ifYes" align="center" style="visibility:hidden">
-            <h4 align="center">SCAN Or Pay To +91-8920321474</h4>
+            <h4 align="center">SCAN Or Pay To<br>+91-8920321474</h4>
 				    <img src="payment.png"><br>
             <b>Transaction ID:</b><input required type='text' placeholder="xxxxxxxxxxxx" id='yes' name='txnID'><br>
               <fieldset align="right">
