--- a/events/index.html
+++ b/events/index.html
@@ -197,7 +197,7 @@ Event website by @SahilQaiser, Adapted from TEDxJMI project by Syed Faheel Ahmad
             </div>
             <!-- //.position-relative -->
             <div class="bg-gray-light no-padding-rl padding-6 position-relative text-center">
-                <span class="display-block font-family-alt font-weight-700 letter-spacing-2 text-gray-dark-2 text-small text-uppercase">
+                <span class="display-block font-family-alt font-weight-700 letter-spacing-2 text-gray-dark-2 Text-small Text-uppercase">
                   <button type="button" class="btn" data-toggle="modal" data-target="#Codemodal"><span class="glyphicon glyphicon-exclamation-sign"></span> Game of Codes</button>
                     <!-- Modal -->
                     <div class="modal fade" id="Codemodal" role="dialog">
@@ -213,7 +213,8 @@ Event website by @SahilQaiser, Adapted from TEDxJMI project by Syed Faheel Ahmad
                             <p>Do you have what it takes to survive a coding Marathon?</p>
                             <p>Then we have just the right thing for you...</p>
                             <p>Teknothon'18 presents 'Game of Codes' where participants can show their ability to solve some real problems using C/C++/Java</p>
-                            <p>Event Type : SOLO</p><p>Registration Cost : </p>
+                            <p>Event Type : SOLO</p><p>Registration Cost : </p><br>
+                            <a href="../eventreg/">Register NOW!</a>
                           </div>
                           <div class="modal-footer">
                             <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
