--- a/eventreg/index.html
+++ b/eventreg/index.html
@@ -65,11 +65,6 @@ Page Create By Basarat Ali (github.com/joker-r)
   <!--[if lt IE 8]>
   <script src="../res/js/modernizr.min.js"></script>
   <![endif]-->
-  <style>
-      .fill-container div{
-         margin-left: 0%;
-      }
-    </style>
 </head>
 
 <body id="page-top">
@@ -165,10 +160,10 @@ Page Create By Basarat Ali (github.com/joker-r)
                    </div>
               <div class="row">
              <!-- <label for="sel1">Select Event :</label> -->
-             <div class="container fill-container sizeAdjust">
+             <div class="fill-container" style="margin-left: 0%;">
              <div class="bg-gray-light no-padding-rl sizeAdjustModal position-relative text-center">
                 <span class="display-block font-family-alt font-weight-700 letter-spacing-2 text-gray-dark-2 text-small text-uppercase">
-                  <button type="button" class="btn" data-toggle="modal" data-target="#EventsModal"><span align="right" class="glyphicon glyphicon-exclamation-sign"></span> Select Events</button>
+                  <button type="button" class="btn pure-group" data-toggle="modal" data-target="#EventsModal"><span align="right" class="glyphicon glyphicon-exclamation-sign"></span> Select Events</button>
                     <!-- Modal -->
                     <div class="modal fade" id="EventsModal" role="dialog">
                       <div class="modal-dialog modal-lg">
