--- a/eventreg/index.html
+++ b/eventreg/index.html
@@ -160,12 +160,12 @@ Page Create By Basarat Ali (github.com/joker-r)
                    </div>
               <div class="row">
              <!-- <label for="sel1">Select Event :</label> -->
-             <div class="fill-container" style="margin-left: 0%;">
-             <div class="bg-gray-light no-padding-rl sizeAdjustModal position-relative text-center">
+             <div class="fill-container">
+             <div class="bg-gray-light no-padding-rl position-relative text-center">
                 <span class="display-block font-family-alt font-weight-700 letter-spacing-2 text-gray-dark-2 text-small text-uppercase">
                   <button type="button" class="btn pure-group" data-toggle="modal" data-target="#EventsModal"><span align="right" class="glyphicon glyphicon-exclamation-sign"></span> Select Events</button>
                     <!-- Modal -->
-                    <div class="modal fade" id="EventsModal" role="dialog">
+                    <div class="modal fade sizeAdjustModal" id="EventsModal" role="dialog">
                       <div class="modal-dialog modal-lg">
                         <!-- Modal content-->
                         <div class="modal-content">
