--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!--
 Teknothon 2018 
 
-Event website by @SahilQaiser, Adapted from TEDxJMI project by Syed Faheel Ahmad (github.com/faheel)
+Event website by @SahilQaiser, Adapted from github project of Syed Faheel Ahmad (github.com/faheel)
 -->
 
 <!DOCTYPE html>
