--- a/eventreg/index.html
+++ b/eventreg/index.html
@@ -54,6 +54,7 @@ Event website by @SahilQaiser, Adapted from github project of Syed Faheel Ahmad 
   <link rel="stylesheet" href="../res/css/main.css">
   <link rel="stylesheet" href="../res/css/style.css">
   <link rel="stylesheet" href="wireframe.css">
+  <link rel="stylesheet" href="radioCheck.css">
 
   <!-- Color skin -->
   <link rel="stylesheet" href="../res/css/color_blue.css">
@@ -214,12 +215,9 @@ Event website by @SahilQaiser, Adapted from github project of Syed Faheel Ahmad 
                                     <div class="custom-control custom-radio">
                                       <input id="paytmRadio" checked name="paymentMethod" type="radio" class="custom-control-input">
                                       <label class="custom-control-label" for="paytmRadio">PayTM</label>
+                                      <input id="cashRadio" name="paymentMethod" type="radio" class="custom-control-input">
+                                    <label class="custom-control-label" for="cashRadio">Cash (On Event Day)</label>
                                     </div>
-                                </div>
-                                <div class="d-block my-3" style="margin-right:5%; width:45%">
-                                    <div class="custom-control custom-radio">
-                                    <input id="cashRadio" name="paymentMethod" type="radio" class="custom-control-input">
-                                    <label class="custom-control-label" for="cashRadio">Cash (On Event Day)</label> </div>
                                 </div> 
                                 <span style="margin-left:40%;width:15%;" class="display-block font-family-alt font-weight-700 letter-spacing-2 text-gray-dark-2 text-small text-uppercase">
                                 <!-- Modal -->      
